--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,10 +5,10 @@ layout: default
 <!-- about.html -->
       <div class="post">
         <header class="post-header">
-          <h1 class="post-title">
+          <h1 class="post-title custom-font-title">
            {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
           </h1>
-          <p class="desc">{{ page.subtitle }}</p>
+          <p class="desc custom-font-subtitle">{{ page.subtitle }}</p>
         </header>
 
         <article>
@@ -50,10 +50,57 @@ layout: default
           </div>
           {%- endif %}
 
-          <div class="clearfix">
+          <div class="clearfix custom-font">
             {{ content }}
           </div>
           
+          <div class="two-column-block">
+            <div class="education-column">
+              <h2>Education</h2>
+              <ul class="education-list custom-font">
+                <ul class="education-list">
+                  <li>
+                    Ph.D. in Astronomy, University of Padua
+                    <span class="date">2024</span>
+                  </li>
+                  <li>
+                    M.Sc. in Astrophysics, University of Trieste
+                    <span class="date">2020</span>
+                  </li>
+                  <li>
+                    B.Sc. in Physics, University of Trieste
+                    <span class="date">2018</span>
+                  </li>
+                </ul>
+                
+              </ul>
+            </div>
+            <div class="interests-column">
+              <h2>Keywords of Interest</h2>
+              <ul class="interests-list custom-font">
+                <li>Machine Learning</li>
+                <li>Open Clusters</li>
+                <li>Galactic Archaeology</li>
+                <li>Chemical Evolution</li>
+                <li>Stellar Evolution</li>
+              </ul>
+            </div>
+          </div>
+          
+         
+          
+          <!-- Download buttons section -->
+          <div class="buttons" style="display: flex; gap: 10px;">
+            <a href="assets/pdf/CV_Academic_Lorenzo_Cavallo.pdf" class="btn">
+              <i class="fas fa-download"></i> Academic CV
+            </a>
+            <a href="assets/pdf/resume_Lorenzo_Cavallo.pdf" class="btn">
+              <i class="fas fa-download"></i> Resumé
+            </a>
+          </div>
+          
+          <div class="divider"></div>
+
           <!-- Selected papers -->
           {% if page.selected_papers -%}
             <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
